WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
194557
Find on Page shouldn't zoom in on matches
https://bugs.webkit.org/show_bug.cgi?id=194557
Summary
Find on Page shouldn't zoom in on matches
Tim Horton
Reported
2019-02-12 14:24:43 PST
Find on Page shouldn't zoom in on matches
Attachments
Patch
(5.16 KB, patch)
2019-02-12 14:25 PST
,
Tim Horton
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2019-02-12 14:25:13 PST
Created
attachment 361841
[details]
Patch
Tim Horton
Comment 2
2019-02-12 14:25:25 PST
<
rdar://problem/42087017
>
Tim Horton
Comment 3
2019-02-12 14:26:32 PST
I waffled a bit about adding this to SmartMagnificationController since it is explicitly not magnification. But I'd rather there than a new message in one of the god classes, and I think we could rename and push SmartMagnificationController in the direction of being the standard "reveal stuff" mechanism instead of just being about smart magnification.
Wenson Hsieh
Comment 4
2019-02-12 14:27:30 PST
Comment on
attachment 361841
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=361841&action=review
r=mews
> Source/WebKit/UIProcess/ios/SmartMagnificationController.mm:131 > +void SmartMagnificationController::scrollToRect(FloatPoint origin, FloatRect targetRect)
Nit - could be const FloatPoint& and const FloatRect&. Do we also need WebCore:: here?
Tim Horton
Comment 5
2019-02-12 14:31:41 PST
(In reply to Wenson Hsieh from
comment #4
)
> Comment on
attachment 361841
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=361841&action=review
> > r=mews
Thankyou.
> > Source/WebKit/UIProcess/ios/SmartMagnificationController.mm:131 > > +void SmartMagnificationController::scrollToRect(FloatPoint origin, FloatRect targetRect) > > Nit - could be const FloatPoint& and const FloatRect&.
Could be but why do that when they fit in a register :P (/me channels andersca)
> Do we also need WebCore:: here?
No, there's a 'using namespace WebCore' inside the 'namespace WebKit' (which is fine).
WebKit Commit Bot
Comment 6
2019-02-12 15:33:29 PST
Comment on
attachment 361841
[details]
Patch Clearing flags on attachment: 361841 Committed
r241323
: <
https://trac.webkit.org/changeset/241323
>
WebKit Commit Bot
Comment 7
2019-02-12 15:33:30 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug