Find on Page shouldn't zoom in on matches https://bugs.webkit.org/show_bug.cgi?id=194557 <rdar://problem/42087017>

Reviewed by Wenson Hsieh.

* UIProcess/ios/SmartMagnificationController.h:
* UIProcess/ios/SmartMagnificationController.messages.in:
* UIProcess/ios/SmartMagnificationController.mm:
(WebKit::SmartMagnificationController::scrollToRect):
* WebProcess/WebPage/ios/FindControllerIOS.mm:
(WebKit::FindController::updateFindIndicator):
Only scroll to reveal the find result, do not zoom in.


Canonical link: https://commits.webkit.org/208978@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@241323 268f45cc-cd09-0410-ab3c-d52691b4dbfc